--- a/app/src/main/res/layout/activity_chat_mode.xml
+++ b/app/src/main/res/layout/activity_chat_mode.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatModeActivity">
+    tools:context=".ui.ChatModeActivity">
 
     <!--recycler view to display our chats-->
     <androidx.recyclerview.widget.RecyclerView
