--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -5,8 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/bg_img"
     android:layout_height="match_parent"
-    tools:context=".ChatModeActivity">
+    tools:context=".ui.ChatModeActivity">
 
     <!--recycler view to display our chats-->
     <androidx.recyclerview.widget.RecyclerView
@@ -23,6 +24,12 @@
         <EditText
             android:id="@+id/voice_mode_ed"
             android:layout_width="0dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:backgroundTint="#FFFFFF"
+            android:textColorHint="#00B0FF"
+            android:textColor="#FFFFFF"
+            android:layout_marginHorizontal="10dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:layout_weight="6"
